[tool.poetry]
name = "ixia"
version = "1.3.1"
description = "A library connecting secrets' security with random's versatility"
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
documentation = "https://trag1c.github.io/ixia/"
repository = "https://github.com/trag1c/ixia"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
pytest = "^7.4.0"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
ruff = "^0.4.5"
interrogate = "^1.7.0"
pytest-cov = "^5.0.0"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "ANN1", "ANN401", "ISC001", "T201", "TD003", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-returns = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
