[tool.poetry]
name = "ixia"
version = "1.3.2"
description = "Connecting secrets' security with random's versatility"
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
documentation = "https://trag1c.github.io/ixia/"
repository = "https://github.com/trag1c/ixia"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
pytest = "^7.4.0"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
ruff = "^0.4.5"
interrogate = "^1.7.0"
pytest-cov = "^5.0.0"
mike = "^2.1.1"

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "if sys.version_info.*:", "if __name__ == \"__main__\":"]

[tool.interrogate]
exclude = ["tests"]
ignore-init-method = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
ignore-magic = true
ignore-nested-functions = true
verbose = 1

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "ANN1", "ANN401", "ISC001", "T201", "TD003", "PLR2004", "S105"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
max-branches = 15
max-returns = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
