[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ixia"
version = "1.3.2"
description = "Connecting secrets' security with random's versatility"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "trag1c", email = "trag1cdev@yahoo.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
documentation = "https://trag1c.github.io/ixia/"
repository = "https://github.com/trag1c/ixia"

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.24,<10",
    "mkdocs~=1.6",
    "mypy~=1.5",
    "pytest~=7.4",
    "ruff~=0.8.0",
    "interrogate~=1.7",
    "pytest-cov~=5.0",
    "mike>=2.1.1,<3",
]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "if sys.version_info.*:", "if __name__ == \"__main__\":"]

[tool.interrogate]
exclude = ["tests"]
ignore-init-method = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
ignore-magic = true
ignore-nested-functions = true
verbose = 1

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "ANN401", "ISC001", "T201", "TD003", "PLR2004", "S105"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
max-branches = 15
max-returns = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]
